--- a/bogobogo-frontend/package.json
+++ b/bogobogo-frontend/package.json
@@ -14,12 +14,14 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-i18next": "^8.1.0",
     "craco-less": "^3.0.1",
+    "framer-motion": "^11.2.11",
     "i18next": "^23.11.5",
     "postcss-url": "^10.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-scripts": "5.0.1",
+    "react-typist": "^2.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
