--- a/bogobogo-frontend/package.json
+++ b/bogobogo-frontend/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-scripts": "5.0.1",
-    "react-typist": "^2.0.5",
+    "react-use": "^17.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
