--- a/bogobogo-frontend/package.json
+++ b/bogobogo-frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-use": "^17.5.0",
     "typescript": "^4.9.5",
